--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <li><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="http://www.telegram.com" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                <li><a href="http://www.telegram.org" target="_blank"><i class="fab fa-telegram"></i></a></li>
             </ul>
         </div>
     </footer>
